--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">skeletonskeleton
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>CrossWordy</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="stylesheet" href="style.css">
   <script src="main.js" async></script>
 </head>
@@ -13,27 +12,6 @@
   <h1><a href="https://github.com/darthwalsh/CrossWordy">darthwalsh's</a> CrossWordy</h1>
   <table id="grid">
     <tbody>
-      <tr>
-        <td>
-          <span>1</span>
-          <div>A</div>
-        </td>
-        <td><div>B</div></td>
-        <td><div></div></td>
-      </tr>
-      <tr>
-        <td>
-          <span>88</span>
-          <div>W</div>
-        </td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td class="dark"></td>
-        <td></td>
-      </tr>
     </tbody>
   </table>
 
