--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -14,6 +14,7 @@
     <tbody>
     </tbody>
   </table>
+  <div id="hint">hint</div>
 
 </body>
 </html>
