--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>CrossWordy</title>
   <!-- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="stylesheet" href="style.css">
-  <script src="main.js" async></script>
 </head>
 
 <body>
@@ -16,5 +15,8 @@
   </table>
   <div id="hint">hint</div>
 
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
