--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
   <h1><a href="https://github.com/darthwalsh/CrossWordy">darthwalsh's</a> CrossWordy</h1>
   <table id="grid">
-    <tbody>
-    </tbody>
   </table>
-  <div id="hint">hint</div>
+  <div id="clue">clue</div>
 
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
