Allow clue entry
Entry validation checks that format is right
Also pretty good for validating that squares clicked in right place

Clue at bottom updates to the current cell
Clues displayed plainly right now, but in #6 can improve that.

Fixes #5

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
   </table>
   <div id="clue">clue</div>
 
+  <div id="clues">
+    <div>
+      <h3>Across</h3>
+      <!-- TODO make prettier fancy number, dynamic -->
+      <div id="aclues"></div>
+    </div>
+    <div>
+      <h3>Down</h3>
+      <div id="dclues"></div>
+    </div>
+  </div>
+
   <div id='measurer'></div>
 
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
