--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <h1>CrossWordy</h1>
-  <div class="topleft">
+  <div id="topleft">
     <input id="rebus" type="checkbox" />
     <label for="rebus">Rebus</label>
   </div>
@@ -37,6 +37,7 @@
 
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
+  <script src="https://unpkg.com/puzjs@1.0.2/src/puz.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
