title in header

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
   </head>
 
   <body>
-    <h1>CrossWordy</h1>
-    <div id="topleft">
-      <input id="rebus" type="checkbox" />
-      <label for="rebus">Rebus</label>
-    </div>
-    <a id="topright" href="https://github.com/darthwalsh/CrossWordy" target="_blank">
-      <img height="20" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" />
-    </a>
+    <header>
+      <div id="topleft">
+        <input id="rebus" type="checkbox" />
+        <label for="rebus">Rebus</label>
+      </div>
+      <h1 id="title">CrossWordy</h1>
+      <a id="topright" href="https://github.com/darthwalsh/CrossWordy" target="_blank">
+        <img
+          height="20"
+          src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg"
+          title="CrossWordy by darthwalsh at GitHub"
+        />
+      </a>
+    </header>
 
     <table id="grid"></table>
     <div id="clue">clue</div>
