share selected with share icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     </header>
 
     <table id="grid"></table>
-    <div id="clue">clue</div>
+    <div id="cluebar">
+      <img id="share" height="20" src="img/share.svg" title="Share clue" />
+      <!-- Icons made by https://www.flaticon.com/authors/pixel-perfect -->
+      <div id="clue">clue</div>
+    </div>
 
     <div id="clues">
       <div>
