clue progress fixes #6

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <h3>Down</h3>
         <div id="dclues"></div>
       </div>
+      <img id="hideClues" height="20" src="img/closed-eye.svg" title="Hide clues" />
+      <!-- Icons made by https://www.flaticon.com/authors/freepik -->
     </div>
 
     <div id="measurer"></div>
