--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -32,6 +32,7 @@
           <label for="rebus">Rebus</label>
         </div>
         <h1 id="title">CrossWordy</h1>
+        <span id="time">A</span>
         <img id="hideClues" height="20" src="img/closed-eye.svg" title="Hide clues" />
         <!-- Icons made by https://www.flaticon.com/authors/freepik -->
         <a id="topright" href="https://github.com/darthwalsh/CrossWordy" target="_blank">
