add solution checking

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -32,6 +32,8 @@
           <label for="rebus">Rebus</label>
         </div>
         <h1 id="title">CrossWordy</h1>
+        <button class="sol" id="sol-whats-wrong">What's Wrong</button>
+        <button class="sol" id="sol-check">Check</button>
         <span id="time">A</span>
         <img id="hideClues" height="20" src="img/closed-eye.svg" title="Hide clues" />
         <!-- Icons made by https://www.flaticon.com/authors/freepik -->
